tests/macros/rawlist/filter.rs
fn main() {
    let q = inquisition::questions![rawlist { filter: todo!() }];
}
